site: layout improvements; align with Foundation 6

--- a/ogreserver/static/sass/app.scss
+++ b/ogreserver/static/sass/app.scss
@@ -15,9 +15,167 @@
 @include foundation-breadcrumbs;
 @include foundation-button-group;
 @include foundation-callout;
+@include foundation-dropdown-menu;
 @include foundation-label;
+@include foundation-menu;
+@include foundation-table;
 @include foundation-thumbnail;
 @include foundation-top-bar;
 
 @include motion-ui-transitions;
 @include motion-ui-animations;
+
+
+header {
+	background: url(../images/marquee-stars.svg) #074e68;
+	background-size: cover;
+	padding: 22px 0;
+	h5 {
+		font-weight: 300;
+		color: white;
+	}
+	dl, dd, input.button {
+		margin: 0;
+	}
+}
+
+table th { text-align: left; }
+
+.column.search-wrapper {
+	padding: 0 0 0 0.5em;
+}
+
+.button.small.search {
+	font-size: 0.85rem;
+}
+
+h2.detail_page {
+	border-bottom: solid 1px #dddddd;
+	margin-bottom: 30px;
+}
+
+.row {
+	.info {
+		margin-top: 20px;
+	}
+	.book-info {
+		p { margin-bottom: 0 }
+	}
+}
+
+.body {
+	padding-top: 20px;
+}
+
+input.button {
+	border-radius: 3px;
+}
+
+/* -----------------------------------------
+   Forms
+----------------------------------------- */
+fieldset {
+	border: 3px solid #ECF0F1;
+	margin: 1.125rem 0;
+	padding: 1.25rem;
+}
+fieldset legend {
+	background: #FFFFFF;
+	font-weight: bold;
+	margin: 0;
+	margin-left: -0.1875rem;
+	padding: 0 0.1875rem;
+}
+
+/* -----------------------------------------
+   Listing
+----------------------------------------- */
+.odd { background-color: #aaa; color: #0A65C8; }
+.even { background-color: #ddd; color: #2A85E8; }
+
+li.ebook {
+	clear: both;
+
+	.secondsection {
+		height: 1.3em;
+		clear: both;
+	}
+	a.title {
+		font-size: 1.2em;
+	}
+	span.info {
+		float: right;
+		line-height:20px;
+	}
+
+	.panel {
+		margin-bottom: 0.755rem;
+		padding: 1rem;
+	}
+}
+
+ul.users {
+	float: right;
+	margin-bottom: 0px;
+	li { float: left; margin-bottom: 0px; font-size: 0.9em; }
+}
+ul.formats {
+	float: left;
+	margin-bottom: 0px;
+	li { float: left; margin-bottom: 0px; font-size: 0.9em; }
+}
+
+p#loading-message { display: none; }
+p#loading-message.loading { display: block; }
+
+.hidden { display: none; }
+
+
+/* -----------------------------------------
+   Top-bar / Footer
+----------------------------------------- */
+.top-bar {
+	padding: 0;
+	a {
+		color: white;
+	}
+}
+.top-bar-right {
+	a.ogre {
+		padding: 0;
+		img { width: 36px; height: 36px; }
+	}
+}
+.top-bar {
+	.menu-text {
+		font-size: 1.0625rem;
+		padding: 0;
+	}
+}
+
+.menu a:hover {
+	color: $orange;
+	background-color: $blue-darkest;
+}
+
+.row.full-width {
+	max-width: 100%;
+}
+
+footer.row.full-width {
+	background-color: #eee;
+	padding-top: 30px;
+	padding-bottom: 20px;
+	margin-top: 30px;
+	border-top: solid 1px #dddddd;
+	font-size: 14px;
+}
+
+#copyright {
+	background: #3f3f3f;
+	color: #fff;
+	padding: 11px 0;
+	a {
+		color: #fff;
+	}
+}
