--- a/ogreserver/static/sass/_settings.scss
+++ b/ogreserver/static/sass/_settings.scss
@@ -15,30 +15,66 @@
 //  12. Button Group
 //  13. Callout
 //  19. Forms
+//  17. Dropdown Menu
+//  22. Menu
+//  30. Table
 //  32. Thumbnail
 //  34. Top Bar
 
 @import 'util/util';
+
+// Palette
+// -------
+
+$blue-lighter:	#72B0D9;
+$blue-light:	#4995C7;
+$blue:			#2980b9;
+$blue-dark:		#096EB0;
+$blue-darker:	#07507F;
+$blue-darkest:	#022F4C;
+
+$green-lighter:	#6FDFA9;
+$green-light:	#44D08C;
+$green:			#22C476;
+$green-dark:	#00BC62;
+$green-darker:	#008A48;
+
+$orange-lighter:#FFC67F;
+$orange-light:	#FFB353;
+$orange:		#FFA22C;
+$orange-dark:	#FF8E00;
+$orange-darker:	#C76F00;
+
+$red-light:		#FFDE7F;
+$red-lighter:	#FFD253;
+$red:			#FFC82C;
+$red-dark:		#FFBC00;
+$red-darker:	#C79300;
+
+$wet-asphalt:   #34495E;
+$clouds:		#ECF0F1;
+$grey333:		#333333;
+$silver:        #BDC3C7;
 
 // 1. Global
 // ---------
 
 $global-width: rem-calc(1200);
 $global-font-size: 100%;
-$global-lineheight: 1.5;
-$primary-color: #2199e8;
-$secondary-color: #777;
-$success-color: #3adb76;
+$global-lineheight: 1.231;
+$primary-color: $blue-light;
+$secondary-color: $clouds;
+$success-color: $green;
 $warning-color: #ffae00;
-$alert-color: #ec5840;
-$light-gray: #e6e6e6;
-$medium-gray: #cacaca;
-$dark-gray: #8a8a8a;
+$alert-color: $red;
+$light-gray: $clouds;
+$medium-gray: $grey333;
+$dark-gray: #34495E;
 $black: #0a0a0a;
 $white: #fefefe;
 $body-background: $white;
-$body-font-color: $black;
-$body-font-family: "Helvetica Neue", Helvetica, Roboto, Arial, sans-serif;
+$body-font-color: $wet-asphalt;
+$body-font-family: Lato, "Helvetica Neue", Helvetica, Roboto, Arial, sans-serif;
 $body-antialiased: true;
 $text-direction: ltr;
 $global-margin: 1rem;
@@ -46,7 +82,7 @@ $global-padding: 1rem;
 $global-margin: 1rem;
 $global-weight-normal: normal;
 $global-weight-bold: bold;
-$global-radius: 0;
+$global-radius: 2px;
 $global-text-direction: ltr;
 $rem-base: 16px;
 
@@ -212,7 +248,7 @@ $buttongroup-expand-max: 6;
 // 13. Callout
 // -----------
 
-$callout-background: $white;
+$callout-background: $blue-lighter;
 $callout-background-fade: 85%;
 $callout-border: 1px solid rgba($black, 0.25);
 $callout-margin: 0 0 1rem 0;
@@ -268,6 +304,40 @@ $label-font-size: 0.8rem;
 $label-padding: 0.33333rem 0.5rem;
 $label-radius: $global-radius;
 
+// 17. Dropdown Menu
+// -----------------
+
+$dropdownmenu-arrows: true;
+$dropdownmenu-min-width: 200px;
+$dropdownmenu-background: $white;
+$dropdown-border: 1px solid $medium-gray;
+
+// 22. Menu
+// --------
+
+$menu-margin: 0;
+$menu-margin-nested: 1rem;
+$menu-item-padding: 0.7rem 1rem;
+$menu-icon-spacing: 0.25rem;
+$menu-expand-max: 6;
+
+// 30. Table
+// ---------
+
+$table-background: $white;
+$table-color-scale: 5%;
+$table-border: 1px solid smart-scale($table-background, $table-color-scale);
+$table-padding: rem-calc(8 10 10);
+$table-hover-scale: 2%;
+$table-row-hover: darken($table-background, $table-hover-scale);
+$table-row-stripe-hover: darken($table-background, $table-color-scale + $table-hover-scale);
+$table-striped-background: smart-scale($table-background, $table-color-scale);
+$table-stripe: even;
+$table-head-background: smart-scale($table-background, $table-color-scale / 2);
+$table-foot-background: smart-scale($table-background, $table-color-scale);
+$table-head-font-color: $body-font-color;
+$show-header-for-stacked: false;
+
 // 32. Thumbnail
 // -------------
 
@@ -282,7 +352,6 @@ $thumbnail-radius: $global-radius;
 // -----------
 
 $topbar-padding: 0.5rem;
-$topbar-background: #eee;
-$topbar-link-color: #fff;
+$topbar-background: $grey333;
+$topbar-link-color: $success-color;
 $topbar-input-width: 200px;
-
