--- a/ogreserver/templates/layout.html
+++ b/ogreserver/templates/layout.html
@@ -7,46 +7,37 @@
 
 		<title>O.G.R.E.</title>
 
-		<link rel="stylesheet" href="{{ url_for('core.static', filename='stylesheets/normalize.css') }}">
 		<link rel="stylesheet" href="{{ url_for('core.static', filename='stylesheets/app.css') }}">
-
-		<script src="{{ url_for('core.static', filename='bower_components/foundation/js/vendor/modernizr.js') }}"></script>
 	</head>
 
 	<body>
-		<nav class="top-bar">
-			<ul class="title-area">
-				<li class="name">
-					<h1><a href="/">O.G.R.E.</a></h1>
-				</li>
-			</ul>
+		<header class="top-bar">
+			<div class="top-bar-left">
+				<ul class="menu">
+					<li>
+						<a href="/">O.G.R.E.</a>
+					</li>
+				</ul>
+			</div>
 
-			<section class="top-bar-section">
-				<ul class="right">
-					<li class="divider"></li>
+			<div class="top-bar-right">
+				<ul class="menu">
 					{% if not session.user_id %}
 					<li><a href="{{ url_for_security('login') }}">log in</a></li>
 					{% else %}
 					<li><a href="{{ url_for('user.profile') }}">{{ g.user.username }}</a></li>
-					<li class="divider"></li>
 					<li><a href="{{ url_for_security('logout') }}">log out</a></li>
 					{% endif %}
-					<li class="divider"></li>
-					<li>
+					<li class="menu-text">
 						<a href="http://en.wikipedia.org/wiki/Ogre" target="_blank" class="ogre">
-							<img src="{{ url_for('core.static', filename='images/ogrew.png') }}" width="38" height="38" />
+							<img src="{{ url_for('core.static', filename='images/ogrew.png') }}" />
 						</a>
 					</li>
 				</ul>
-			</section>
-		</nav>
+			</div>
+		</header>
 
 		<header>
-			<div class="row">
-				<div class="large-12 columns">
-					<h5>Search for a book</h5>
-				</div>
-			</div>
 			<div class="row">
 				{% import "macros.html" as macros %}
 				{{ macros.search() }}
@@ -54,7 +45,7 @@
 		</header>
 
 		<section class="row body">
-			<div class="large-12 columns">
+			<div class="large-12 column">
 				<div id="messages">
 					{% for message in get_flashed_messages() %}
 					<div class="flash">{{ message }}</div>
@@ -66,12 +57,12 @@
 		</section>
 
 		<footer class="row full-width">
-			<div class="large-4 columns">
+			<div class="large-4 column">
 				<h6><strong>Made by Oii, inc.</strong></h6>
 				<p>O.G.R.E. is another by-product of the oii hive mind</p>
 			</div>
 
-			<div class="large-4 columns">
+			<div class="large-4 column">
 				<h6><strong>I'm lost!</strong></h6>
 				<p>Skim through the <a href="/docs">O.G.R.E. docs</a>.</p>
 			</div>
@@ -79,12 +70,14 @@
 
 		<footer id="copyright">
 			<div class="row full-width">
-				<div class="large-4 columns">
-					<p>Site content &copy; 2014 Oii, inc.</p>
+				<div class="large-4 column">
+					<ul class="menu">
+						<li><a>&copy; 2014 Oii, inc.</a></li>
+					</ul>
 				</div>
-				<div class="large-8 columns">
-					<ul class="inline-list right">
-						<li><a href="http://ogre.oii.yt">Home</a></li>
+				<div class="large-8 column">
+					<ul class="menu float-right">
+						<li><a href="/">Home</a></li>
 						<li><a href="http://github.com/oii/ogre">Hacking</a></li>
 					</ul>
 				</div>
@@ -93,7 +86,6 @@
 
 		<script src="{{ url_for('core.static', filename='bower_components/jquery/dist/jquery.min.js') }}"></script>
 		<script src="{{ url_for('core.static', filename='bower_components/foundation/js/foundation.min.js') }}"></script>
-		<script src="{{ url_for('core.static', filename='bower_components/foundation/js/foundation/foundation.topbar.js') }}"></script>
 		<script src="{{ url_for('core.static', filename='bower_components/jquery-infinite-scroll-helper/jquery.infinite-scroll-helper.js') }}"></script>
 		<script>
 		  $(document).foundation();
