--- a/ogreserver/templates/layout_noauth.html
+++ b/ogreserver/templates/layout_noauth.html
@@ -7,23 +7,24 @@
 
 		<title>O.G.R.E.</title>
 
-		<link rel="stylesheet" href="{{ url_for('core.static', filename='stylesheets/normalize.css') }}">
 		<link rel="stylesheet" href="{{ url_for('core.static', filename='stylesheets/app.css') }}">
 
 		<script src="{{ url_for('core.static', filename='bower_components/foundation/js/vendor/modernizr.js') }}"></script>
 	</head>
 
 	<body>
-		<nav class="top-bar">
-			<ul class="title-area">
-				<li class="name">
-					<h1><a href="/">O.G.R.E.</a></h1>
-				</li>
-			</ul>
-		</nav>
+		<header class="top-bar">
+			<div class="top-bar-left">
+				<ul class="menu">
+					<li>
+						<a href="/">O.G.R.E.</a>
+					</li>
+				</ul>
+			</div>
+		</header>
 
 		<div class="row">
-			<div class="large-8 columns">
+			<div class="large-8 column">
 				<br/>
 				{% block body %}{% endblock %}
 			</div>
@@ -31,7 +32,7 @@
 
 		<footer id="copyright">
 			<div class="row full-width">
-				<div class="large-4 columns">
+				<div class="large-4 column">
 					<p>Site content &copy; 2014 Oii, inc.</p>
 				</div>
 			</div>
@@ -39,9 +40,5 @@
 
 		<script src="{{ url_for('core.static', filename='bower_components/jquery/dist/jquery.min.js') }}"></script>
 		<script src="{{ url_for('core.static', filename='bower_components/foundation/js/foundation.min.js') }}"></script>
-		<script src="{{ url_for('core.static', filename='bower_components/foundation/js/foundation/foundation.topbar.js') }}"></script>
-		<script>
-		  $(document).foundation();
-		</script>
 	</body>
 </html>
