server: static build pipeline using makefile

--- a/ogreserver/static/sass/app.scss
+++ b/ogreserver/static/sass/app.scss
@@ -27,7 +27,7 @@
 
 
 header {
-	background: url(../images/marquee-stars.svg) #074e68;
+	background: url(images/marquee-stars.svg) #074e68;
 	background-size: cover;
 	padding: 22px 0;
 	h5 {
