--- a/ogreserver/templates/layout.html
+++ b/ogreserver/templates/layout.html
@@ -7,7 +7,7 @@
 
 		<title>O.G.R.E.</title>
 
-		<link rel="stylesheet" href="{{ url_for('core.static', filename='stylesheets/app.css') }}">
+		<link rel="stylesheet" href="{{ url_for('core.static', filename='ogreserver.css') }}">
 	</head>
 
 	<body>
@@ -72,7 +72,7 @@
 			<div class="row full-width">
 				<div class="large-4 column">
 					<ul class="menu">
-						<li><a>&copy; 2014 Oii, inc.</a></li>
+						<li><a>&copy; 2016 Oii, inc.</a></li>
 					</ul>
 				</div>
 				<div class="large-8 column">
@@ -84,12 +84,10 @@
 			</div>
 		</footer>
 
-		<script src="{{ url_for('core.static', filename='bower_components/jquery/dist/jquery.min.js') }}"></script>
-		<script src="{{ url_for('core.static', filename='bower_components/foundation/js/foundation.min.js') }}"></script>
-		<script src="{{ url_for('core.static', filename='bower_components/jquery-infinite-scroll-helper/jquery.infinite-scroll-helper.js') }}"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+		<script src="{{ url_for('core.static', filename='ogreserver.js') }}"></script>
 		<script>
 		  $(document).foundation();
 		</script>
-		<script src="{{ url_for('core.static', filename='js/app.js') }}"></script>
 	</body>
 </html>
