--- a/ogreserver/templates/layout_noauth.html
+++ b/ogreserver/templates/layout_noauth.html
@@ -7,9 +7,7 @@
 
 		<title>O.G.R.E.</title>
 
-		<link rel="stylesheet" href="{{ url_for('core.static', filename='stylesheets/app.css') }}">
-
-		<script src="{{ url_for('core.static', filename='bower_components/foundation/js/vendor/modernizr.js') }}"></script>
+		<link rel="stylesheet" href="{{ url_for('core.static', filename='ogreserver.css') }}">
 	</head>
 
 	<body>
@@ -33,12 +31,14 @@
 		<footer id="copyright">
 			<div class="row full-width">
 				<div class="large-4 column">
-					<p>Site content &copy; 2014 Oii, inc.</p>
+					<ul class="menu">
+						<li><a>&copy; 2016 Oii, inc.</a></li>
+					</ul>
 				</div>
 			</div>
 		</footer>
 
-		<script src="{{ url_for('core.static', filename='bower_components/jquery/dist/jquery.min.js') }}"></script>
-		<script src="{{ url_for('core.static', filename='bower_components/foundation/js/foundation.min.js') }}"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+		<script src="{{ url_for('core.static', filename='ogreserver.js') }}"></script>
 	</body>
 </html>
