server: ebook curated flag; plus toggle button on ebook detail page

--- a/ogreserver/static/sass/app.scss
+++ b/ogreserver/static/sass/app.scss
@@ -86,6 +86,12 @@ fieldset legend {
 	margin-left: -0.1875rem;
 	padding: 0 0.1875rem;
 }
+div.curated {
+	margin-top: 1em;
+	a.success {
+		padding: 0.2em 0.6em;
+	}
+}
 
 /* -----------------------------------------
    Listing
