server: use SearchForm class with method=GET in search header

--- a/ogreserver/templates/layout.html
+++ b/ogreserver/templates/layout.html
@@ -40,7 +40,7 @@
 		<header>
 			<div class="row">
 				{% import "macros.html" as macros %}
-				{{ macros.search() }}
+				{{ macros.search(search_form) }}
 			</div>
 		</header>
 
