--- a/ogreserver/templates/macros.html
+++ b/ogreserver/templates/macros.html
@@ -1,4 +1,5 @@
-{% macro search(s='') -%}
+{% macro search(form) -%}
+{% if form %}
 <div class="row">
 	<div class="large-2 column">
 		&nbsp;
@@ -11,13 +12,13 @@
 	</div>
 </div>
 
-<form action="{{ url_for('ebooks.listing') }}" method="post">
+<form action="{{ url_for('ebooks.listing') }}" method="get">
 	<div class="row">
 		<div class="large-2 column">
 			&nbsp;
 		</div>
 		<div class="large-7 column search-wrapper">
-			<input type="text" name="s" value="{{ s }}" />
+			{{ form.s }}
 		</div>
 		<div class="large-1 column">
 			<input type="submit" value="Search" class="search button small float-right" />
@@ -27,4 +28,5 @@
 		</div>
 	</div>
 </form>
+{% endif %}
 {%- endmacro %}
