--- a/ogreserver/templates/macros.html
+++ b/ogreserver/templates/macros.html
@@ -27,6 +27,26 @@
 			&nbsp;
 		</div>
 	</div>
+
+	<div class="row">
+		<div class="large-2 column">
+			&nbsp;
+		</div>
+		<div class="large-8 column advanced-closed" id="advanced-form">
+			<a href="#" id="advanced">Advanced</a>
+			<div>
+			{{ form.is_curated.label }}
+			{{ form.is_curated }}
+			</div>
+			<div>
+			{{ form.is_fiction.label }}
+			{{ form.is_fiction }}
+			</div>
+		</div>
+		<div class="large-2 column">
+			&nbsp;
+		</div>
+	</div>
 </form>
 {% endif %}
 {%- endmacro %}
